apps/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports: 
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports: 
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53

  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
