apps/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - 'pihole.home.southcity.dev'
    secretName: pihole-cert
  rules:
  - host: pihole.home.southcity.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pihole-web
            port:
              name: web
